# MapEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  mapeditor.cbp  tiles.cfg
cmake_modules/: FindSDL2.cmake  FindSDL2_image.cmake
src/: Gui.cpp  Gui.h  HelpView.cpp  HelpView.h  IView.h  Image.cpp  Image.h  ImageLoader.cpp  ImageLoader.h  Level.cpp  Level.h  LevelView.cpp  LevelView.h  TileMap.cpp  TileMap.h  TileView.cpp  TileView.h  Utils.cpp  Utils.h
